tests/test_input_files/good/test_good_func_17.punkt
function f <int x> -> int { return x. }

function g <int x> -> int { return -x. }

main {
	var h = f.
	println h(1).

	h = g.
	println h(1).
}
