tests/test_input_files/bad/test_bad_return_stmt_8.punkt
function f <> -> int {
	if true {
		return 0.
	} else {
		var x = 1.
	}
}

main {
	f().
}
